--- a/app-api/pom.xml
+++ b/app-api/pom.xml
@@ -106,13 +106,11 @@
 
   <profiles>
     <profile>
-      <id>jib</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
+      <id>jib-to-aws</id>
       <properties>
-       <!-- <aws.environment>jib</aws.environment>
-        <aws.region>us-east-1</aws.region>-->
+        <!-- default to us-east-1 -->
+        <aws.environment>dev</aws.environment>
+        <aws.region>us-east-1</aws.region>
       </properties>
       <build>
         <resources>
@@ -122,56 +120,100 @@
           </resource>
         </resources>
         <plugins>
-        <plugin>
-          <groupId>com.google.cloud.tools</groupId>
-          <artifactId>jib-maven-plugin</artifactId>
-          <version>${jib-maven-plugin.version}</version>
-          <configuration>
-            <from>
-              <image>docker.io/adoptopenjdk/openjdk11-openj9:slim</image>
-              <auth>
-                <username>kalyan27</username>
-                <password>Kalbob@27</password>
-              </auth>
-            </from>
-            <to>
-              <image>docker.io/kalyan27/app-api-jib:v12</image>
-              <auth>
-                <username>kalyan27</username>
-                <password>Kalbob@27</password>
-              </auth>
-            </to>
-            <allowInsecureRegistries>true</allowInsecureRegistries>
-            <container>
-              <jvmFlags>
-                <jvmFlag>-Djava.security.egd=file:/dev/./urandom</jvmFlag>
-              </jvmFlags>
-              <ports>
-                <port>8090</port>
-              </ports>
-            </container>
-          </configuration>
-          <executions>
-            <execution>
-              <phase>package</phase>
-              <goals>
-                <goal>build</goal>
-              </goals>
-            </execution>
-          </executions>
-        </plugin>
+          <plugin>
+            <groupId>com.google.cloud.tools</groupId>
+            <artifactId>jib-maven-plugin</artifactId>
+            <version>${jib-maven-plugin.version}</version>
+            <configuration>
+              <from>
+                <image>docker.io/adoptopenjdk/openjdk11-openj9:slim</image>
+                <auth>
+                  <username>kalyan27</username>
+                  <password>Kalbob@27</password>
+                </auth>
+              </from>
+              <to>
+                <image>docker.io/kalyan27/app-api-${aws.environment}:${project.version}</image>
+                <auth>
+                  <username>kalyan27</username>
+                  <password>Kalbob@27</password>
+                </auth>
+              </to>
+              <allowInsecureRegistries>true</allowInsecureRegistries>
+              <container>
+                <jvmFlags>
+                  <jvmFlag>-Djava.security.egd=file:/dev/./urandom</jvmFlag>
+                </jvmFlags>
+                <ports>
+                  <port>8090</port>
+                </ports>
+              </container>
+            </configuration>
+            <executions>
+              <execution>
+                <phase>package</phase>
+                <goals>
+                  <goal>build</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>jib-to-local</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <build>
+        <resources>
+          <resource>
+            <directory>src/main/resources</directory>
+            <filtering>true</filtering>
+          </resource>
+        </resources>
+        <plugins>
+          <plugin>
+            <groupId>com.google.cloud.tools</groupId>
+            <artifactId>jib-maven-plugin</artifactId>
+            <version>${jib-maven-plugin.version}</version>
+            <configuration>
+              <from>
+                <image>docker.io/adoptopenjdk/openjdk11-openj9:slim</image>
+                <auth>
+                  <username>kalyan27</username>
+                  <password>Kalbob@27</password>
+                </auth>
+              </from>
+              <to>
+                <image>docker.io/kalyan27/app-api-local:v18</image>
+              </to>
+              <allowInsecureRegistries>true</allowInsecureRegistries>
+              <container>
+                <jvmFlags>
+                  <jvmFlag>-Djava.security.egd=file:/dev/./urandom</jvmFlag>
+                </jvmFlags>
+                <ports>
+                  <port>8090</port>
+                </ports>
+              </container>
+            </configuration>
+            <executions>
+              <execution>
+                <phase>compile</phase>
+                <goals>
+                  <goal>dockerBuild</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
         </plugins>
       </build>
     </profile>
   </profiles>
 
   <build>
-    <resources>
-      <resource>
-        <directory>src/main/resources</directory>
-        <filtering>true</filtering>
-      </resource>
-    </resources>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
