--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -4,6 +4,9 @@ services:
   app:
     container_name: app
     image: 402850851130.dkr.ecr.local.amazonaws.com/app-api-local:${TAG:-latest}
+    depends_on:
+      - app-local-db
+      - app-local-elasticsearch
     environment:
       - spring.cloud.config.enabled=false
       - spring.profiles.active=local
