--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,14 +35,14 @@ services:
       - app_it_db:/var/lib/mysql
     networks:
       - app_local_network
-  elasticsearch:
+  app-local-elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:6.4.3
     container_name: app_local_elasticsearch
     environment:
       - cluster.name=docker-cluster
       - xpack.security.enabled=false
     volumes:
-      - esdata:/usr/share/elasticsearch/data
+      - app_local_elasticsearch:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
     networks:
@@ -51,7 +51,7 @@ services:
 volumes:
   app_local_db:
   app_it_db:
-  esdata:
+  app_local_elasticsearch:
 
 networks:
   app_local_network:
