--- a/app-api/src/main/resources/application-local.yml
+++ b/app-api/src/main/resources/application-local.yml
@@ -26,6 +26,9 @@ logging:
     spring: INFO
     app: DEBUG
 management:
+  endpoint:
+    health:
+      show-details: always
   endpoints:
     web:
       exposure:
@@ -37,7 +40,7 @@ spring:
   profiles: local_db
   flyway:
     locations: classpath:db/migration
-    enabled: false #switch to true
+    enabled: true
   autoconfigure:
     exclude:
       - org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
@@ -45,7 +48,7 @@ spring:
     url: jdbc:mysql://${db.containerId:localhost}:3306/app_local_db?useSSL=false&allowPublicKeyRetrieval=true
   jpa:
     hibernate:
-      ddl-auto: create-drop #validate
+      ddl-auto: validate
 a:
   local_db
 ---
