--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -8,6 +8,4 @@ services:
       - spring.cloud.config.enabled=false
       - spring.profiles.active=local
       - aws.kms.enabled=false
-      - db.containerId=app_local_db
-    networks:
-      - app_local_network
+    network_mode: host
