--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,38 +19,36 @@ services:
       - app_local_db:/var/lib/mysql
     networks:
       - app_local_network
-  app-it-db:
-    container_name: app_it_db
-    image: mysql:8.0
-    restart: always
-    environment:
-      - MYSQL_ROOT_HOST=%
-      - MYSQL_ROOT_PASSWORD=kpwd
-      - MYSQL_DATABASE=app_it_db
-    ports:
-      - '3307:3306'
-    expose:
-      - '3307'
+  prometheus:
+    container_name: app_prometheus
+    image: prom/prometheus:v2.10.0
     volumes:
-      - app_it_db:/var/lib/mysql
-    networks:
-      - app_local_network
-  app-local-elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:6.4.3
-    container_name: app_local_elasticsearch
-    environment:
-      - cluster.name=docker-cluster
-      - xpack.security.enabled=false
-    volumes:
-      - app_local_elasticsearch:/usr/share/elasticsearch/data
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
     ports:
-      - 9200:9200
-    networks:
-      - app_local_network
+      - '9090:9090'
+    network_mode: host
+  grafana:
+    container_name: app_grafana
+    image: grafana/grafana:6.2.5
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    ports:
+      - "3000:3000"
+    network_mode: host
+  ngrok:
+    container_name: app_ngrok
+    image: gtriggiano/ngrok-tunnel
+    environment:
+      - TARGET_HOST=localhost
+      - TARGET_PORT=8080
+    ports:
+      - 4040:4040
+    network_mode: host
 
 volumes:
   app_local_db:
-  app_it_db:
   app_local_elasticsearch:
 
 networks:
